# coding: utf-8 -*-
# setup.cfg - Python packaging configuration

[metadata]
name = pyarsenal
version = 0.0.1
url = "https://github.com/aerorahul/pyarsenal"
description = Arsenal of useful Python tools
long_description = file: README.md, LICENSE
keywords = Python, Tools
authors = Rahul Mahajan
authors_email = aerorahul@users.noreply.github.com
license = Apache
platforms = Linux, Unix, MacOS
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
package_dir =
    = src
packages = find_namespace:
setup_requires =
    flake8
install_requires =
    setuptools
    numpy
    scipy
    pandas
    xarray
    netcdf4

[options.packages.find]
where =
    src

[aliases]
localdevelop = develop --user -e -b .
test = pytest
